clean：layoutクラスの整理

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -456,7 +456,7 @@
       </div>
     </section>
 
-    <section class="contact layout-contact layout-contact--sub-campaign">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
