--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <section class="privacy layout-privacy decoration-fish">
+    <section class="privacy layout-sub-privacy decoration-fish">
       <div class="privacy__inner inner">
         <div class="privacy__site-policy site-policy">
           <h2 class="site-policy__title">プライバシーポリシー</h2>
@@ -283,7 +283,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--privacy">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
