--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <section class="terms-of-service layout-terms-of-service decoration-fish">
+    <section class="terms-of-service layout-sub-terms-of-service decoration-fish">
       <div class="terms-of-service__inner inner">
         <div class="terms-of-service__site-policy site-policy">
           <h2 class="site-policy__title">利用規約</h2>
@@ -278,7 +278,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--terms-of-service">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
