--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <section class="page-thanks layout-page-thanks decoration-fish">
+    <section class="page-thanks layout-sub-thanks decoration-fish">
       <div class="page-thanks__inner inner">
         <h2 class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</h2>
         <p class="page-thanks__sub-text text-p">
