--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -451,7 +451,7 @@
       </div>
     </section>
 
-    <section class="contact layout-contact layout-contact--sub-voice">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
