--- a/src/home.html
+++ b/src/home.html
@@ -579,7 +579,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--sub-blog">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
