--- a/src/page-about.html
+++ b/src/page-about.html
@@ -301,7 +301,7 @@
       </div>
     </section>
 
-    <section class="contact layout-contact layout-contact--sub-about">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
