--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <section class="sub-contact layout-page-contact decoration-fish">
+    <section class="sub-contact layout-sub-page-contact decoration-fish">
       <div class="sub-contact__inner inner">
         <div class="sub-contact__error">
           <p>※必須項目が入力されていません。<br class="u-mobile">入力してください。</p>
