--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <section class="faq layout-faq decoration-fish">
+    <section class="faq layout-sub-faq decoration-fish">
       <div class="faq__inner inner">
         <div class="faq__accordion">
           <div class="accordion js-accordion">
@@ -316,7 +316,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--faq">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
