--- a/src/page-info.html
+++ b/src/page-info.html
@@ -296,7 +296,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--sub-info">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
