--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <section class="site-map layout-site-map">
+    <section class="site-map layout-sub-site-map">
       <div class="site-map__inner inner">
         <div class="site-map__menu">
           <div class="menu menu--sub-page">
@@ -366,7 +366,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact layout-sub-contact--site-map">
+    <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__info">
