clean：sub-mvの整理

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <section class="sub-mv sub-mv--sub-campaign">
+    <section class="sub-mv sub-mv--campaign">
       <div class="sub-mv__title">
         <h1>Campaign</h1>
       </div>
