--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -223,7 +223,7 @@
       </div>
     </div>
 
-    <section class="sub-mv sub-mv--sub-voice">
+    <section class="sub-mv sub-mv--voice">
       <div class="sub-mv__title">
         <h1>Voice</h1>
       </div>
