--- a/src/home.html
+++ b/src/home.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--sub-blog">
+    <section class="sub-mv sub-mv--blog">
       <div class="sub-mv__title">
         <h1>Blog</h1>
       </div>
