--- a/src/page-about.html
+++ b/src/page-about.html
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <section class="sub-mv sub-mv--page-sub-about">
+    <section class="sub-mv sub-mv--about">
       <div class="sub-mv__title">
         <h1>About us</h1>
       </div>
