--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--page-contact">
+    <section class="sub-mv sub-mv--contact">
       <div class="sub-mv__title">
         <h1>Contact</h1>
       </div>
