--- a/src/page-price.html
+++ b/src/page-price.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--sub-price">
+    <section class="sub-mv sub-mv--price">
       <div class="sub-mv__title">
         <h1>Price</h1>
       </div>
