--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--sub-faq">
+    <section class="sub-mv sub-mv--faq">
       <div class="sub-mv__title">
         <h1>FAQ</h1>
       </div>
