--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <section class="sub-mv sub-mv--page-contact">
+    <section class="sub-mv sub-mv--contact">
       <div class="sub-mv__title">
         <h1>Contact</h1>
       </div>
