fix：galleryのmarginのクラスを修正

--- a/src/page-about.html
+++ b/src/page-about.html
@@ -271,7 +271,7 @@
       </div>
     </div>
 
-    <section class="gallery">
+    <section class="gallery layout-sub-gallery">
       <div class="gallery__inner inner">
         <div class="gallery__section-title section-title">
           <p class="section-title__eng">Gallery</p>
