--- a/src/page-about.html
+++ b/src/page-about.html
@@ -240,27 +240,27 @@
     <div class="sub-about layout-sub-about decoration-fish">
       <div class="sub-about__inner inner">
         <div class="sub-about__about about">
-          <div class="about__images">
-            <div class="about__image-small">
+          <div class="sub-about__images">
+            <div class="sub-about__image-small">
               <picture>
                 <source srcset="./assets/images/common/about_pc_small.jpg" media="(min-width:768px)">
                 <img src="./assets/images/common/about_sp_small.jpg" alt="赤茶色の屋根に乗っているシーサーと青空">
               </picture>
             </div>
-            <div class="about__image-large">
+            <div class="sub-about__image-large">
               <picture>
                 <source srcset="./assets/images/common/about_pc_large.jpg" media="(min-width:768px)">
                 <img src="./assets/images/common/about_sp_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
               </picture>
             </div>
           </div>
-          <div class="about__content">
-            <div class="about__subtitle">
-              <p class="about__subtitle-text">Dive&nbsp;into<br>the&nbsp;Ocean</p>
+          <div class="sub-about__content">
+            <div class="sub-about__subtitle">
+              <p class="sub-about__subtitle-text">Dive&nbsp;into<br>the&nbsp;Ocean</p>
             </div>
-            <div class="about__body">
-              <div class="about__text-wrap">
-                <p class="about__text text">
+            <div class="sub-about__body">
+              <div class="sub-about__text-wrap">
+                <p class="sub-about__text text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 </p>
