fix：使わなくなったクラス名を削除

--- a/src/index.html
+++ b/src/index.html
@@ -744,7 +744,7 @@
             <ul class="price__items">
               <li class="price__item">
                 <h3 class="price__sub-title under-line">ライセンス講習</h3>
-                <dl class="price__list price-list">
+                <dl class="price__list">
                   <dt class="price__list-term">オープンウォーターダイバーコース</dt>
                   <dd class="price__list-description">¥50,000</dd>
                   <dt class="price__list-term">アドバンスドオープンウォーターコース</dt>
@@ -755,7 +755,7 @@
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">体験ダイビング</h3>
-                <dl class="price__list price-list">
+                <dl class="price__list">
                   <dt class="price__list-term">ビーチ体験ダイビング(半日)</dt>
                   <dd class="price__list-description">¥7,000</dd>
                   <dt class="price__list-term">ビーチ体験ダイビング(1日)</dt>
@@ -768,7 +768,7 @@
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">ファンダイビング</h3>
-                <dl class="price__list price-list">
+                <dl class="price__list">
                   <dt class="price__list-term">ビーチダイビング(2ダイブ)</dt>
                   <dd class="price__list-description">¥14,000</dd>
                   <dt class="price__list-term">ボートダイビング(2ダイブ)</dt>
@@ -781,7 +781,7 @@
               </li>
               <li class="price__item">
                 <h3 class="price__sub-title under-line">スペシャルダイビング</h3>
-                <dl class="price__list price-list">
+                <dl class="price__list">
                   <dt class="price__list-term">貸切ダイビング(2ダイブ)</dt>
                   <dd class="price__list-description">¥24,000</dd>
                   <dt class="price__list-term">1日ダイビング(3ダイブ)</dt>
