fix：下層ページのh1タグを修正

--- a/src/404.html
+++ b/src/404.html
@@ -39,11 +39,11 @@
 <body class="error-page-body page-container">
   <header class="header layout-header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__hamburger hamburger js-hamburger">
         <span></span>
         <span></span>
