fix：トグルの実装の修正

--- a/src/home.html
+++ b/src/home.html
@@ -552,9 +552,9 @@
               <div class="aside__title">
                 <h3>アーカイブ</h3>
               </div>
-              <ul class="aside__blog-archive blog-archive js-blog-archive">
+              <ul class="aside__blog-archive blog-archive">
                 <li class="blog-archive__year">
-                  <p class="toggle">2023</p>
+                  <p class="toggle js-toggle-year">2023</p>
                   <ul class="blog-archive__months">
                     <li><a href="#" class="toggle">3月</a></li>
                     <li><a href="#" class="toggle">2月</a></li>
@@ -562,7 +562,7 @@
                   </ul>
                 </li>
                 <li class="blog-archive__year">
-                  <p class="toggle">2022</p>
+                  <p class="toggle js-toggle-year">2022</p>
                   <ul class="blog-archive__months">
                     <li><a href="#" class="toggle">12月</a></li>
                     <li><a href="#" class="toggle">11月</a></li>
