fix：ブログ詳細のpaginationの修正

--- a/src/single.html
+++ b/src/single.html
@@ -263,9 +263,9 @@
                 </p>
               </div>
             </div>
-            <div class="sub-blog__wp-pagenavi sub-blog__wp-pagenavi--post wp-pagenavi">
-              <a class="previouspostslink" rel="prev" href="#"></a>
-              <a class="nextpostslink" rel="next" href="#"></a>
+            <div class="sub-blog__pagenavi">
+              <a class="sub-blog__pagenavi-prev" href="#"></a>
+              <a class="sub-blog__pagenavi-next" href="#"></a>
             </div>
           </div>
           <aside class="sub-blog__aside aside">
