fix：カテゴリをリンクへ修正

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -239,19 +239,19 @@
 
     <section class="sub-campaign layout-sub-campaign decoration-fish">
       <div class="sub-campaign__inner inner">
-        <div class="category">
+        <div class="sub-campaign__category category">
           <ul class="category__list">
-            <li class="category__item category__item--current">
-              <button>ALL</button>
+            <li class="category__item">
+              <a class="category__text active" href="#">ALL</a>
             </li>
             <li class="category__item">
-              <button>ライセンス講習</button>
+              <a class="category__text" href="#">ライセンス講習</a>
             </li>
             <li class="category__item">
-              <button>ファンダイビング</button>
+              <a class="category__text" href="#">ファンダイビング</a>
             </li>
             <li class="category__item">
-              <button>体験ダイビング</button>
+              <a class="category__text" href="#">体験ダイビング</a>
             </li>
           </ul>
         </div>
