--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -238,215 +238,215 @@
 
     <section class="sub-voice layout-sub-voice decoration-fish">
       <div class="sub-voice__inner inner">
-        <div class="category">
+        <div class="sub-voice__category category">
           <ul class="category__list">
-            <li class="category__item category__item--current">
-              <button>ALL</button>
+            <li class="category__item">
+              <a class="category__text active" href="#">ALL</a>
             </li>
             <li class="category__item">
-              <button>ライセンス講習</button>
+              <a class="category__text" href="#">ライセンス講習</a>
             </li>
             <li class="category__item">
-              <button>ファンダイビング</button>
+              <a class="category__text" href="#">ファンダイビング</a>
             </li>
             <li class="category__item">
-              <button>体験ダイビング</button>
+              <a class="category__text" href="#">体験ダイビング</a>
             </li>
           </ul>
-          <div class="sub-voice__contents">
-            <div class="sub-voice__cards voice-cards">
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">20代(女性)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">ライセンス講習</p>
-                      </div>
+        </div>
+        <div class="sub-voice__contents">
+          <div class="sub-voice__cards voice-cards">
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">20代(女性)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">ライセンス講習</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
                   </div>
                 </div>
               </div>
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">20代(男性)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">ファンダイビング</p>
-                      </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">20代(男性)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">ファンダイビング</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_2.jpg" alt="笑顔の男性の顔写真">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_2.jpg" alt="笑顔の男性の顔写真">
                   </div>
                 </div>
               </div>
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">30代(女性)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">体験ダイビング</p>
-                      </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">30代(女性)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">体験ダイビング</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_3.jpg" alt="二人の若い女性が笑顔でこちらを見ている様子">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_3.jpg" alt="二人の若い女性が笑顔でこちらを見ている様子">
                   </div>
                 </div>
               </div>
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">20代(女性)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">体験ダイビング</p>
-                      </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">20代(女性)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">体験ダイビング</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_4.jpg" alt="屋外で風に髪をなびかせる若い女性">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_4.jpg" alt="屋外で風に髪をなびかせる若い女性">
                   </div>
                 </div>
               </div>
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">30代(カップル)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">ファンダイビング</p>
-                      </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">30代(カップル)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">ファンダイビング</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_5.jpg" alt="若い男女のカップルがソファーで一緒に笑顔でポーズしている様子">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_5.jpg" alt="若い男女のカップルがソファーで一緒に笑顔でポーズしている様子">
                   </div>
                 </div>
               </div>
-              <div class="voice-cards__card voice-card">
-                <div class="voice-card__head">
-                  <div class="voice-card__left">
-                    <div class="voice-card__meta">
-                      <div class="voice-card__age">
-                        <p class="voice-card__age-text">20代(女性)</p>
-                      </div>
-                      <div class="voice-card__category">
-                        <p class="voice-card__category-text">ライセンス講習</p>
-                      </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__card voice-card">
+              <div class="voice-card__head">
+                <div class="voice-card__left">
+                  <div class="voice-card__meta">
+                    <div class="voice-card__age">
+                      <p class="voice-card__age-text">20代(女性)</p>
                     </div>
-                    <div class="voice-card__title">
-                      <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__category">
+                      <p class="voice-card__category-text">ライセンス講習</p>
                     </div>
                   </div>
-                  <div class="voice-card__right">
-                    <div class="voice-card__img colorbox js-colorbox">
-                      <img src="./assets/images/common/voice_6.jpg" alt="自然の中で若い女性が笑顔でポーズしている様子">
-                    </div>
+                  <div class="voice-card__title">
+                    <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                   </div>
                 </div>
-                <div class="voice-card__body">
-                  <div class="voice-card__text-wrap">
-                    <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                      ここにテキストが入ります。ここにテキストが入ります。
-                    </p>
+                <div class="voice-card__right">
+                  <div class="voice-card__img colorbox js-colorbox">
+                    <img src="./assets/images/common/voice_6.jpg" alt="自然の中で若い女性が笑顔でポーズしている様子">
                   </div>
+                </div>
+              </div>
+              <div class="voice-card__body">
+                <div class="voice-card__text-wrap">
+                  <p class="voice-card__text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                    ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="sub-voice__wp-pagenavi wp-pagenavi">
-            <a class="previouspostslink" rel="prev" href="#"></a>
-            <span class="current">1</span>
-            <a class="page larger" href="#">2</a>
-            <a class="page larger" href="#">3</a>
-            <a class="page larger" href="#">4</a>
-            <a class="page larger" href="#">5</a>
-            <a class="page larger" href="#">6</a>
-            <a class="nextpostslink" rel="next" href="#"></a>
-          </div>
+        </div>
+        <div class="sub-voice__wp-pagenavi wp-pagenavi">
+          <a class="previouspostslink" rel="prev" href="#"></a>
+          <span class="current">1</span>
+          <a class="page larger" href="#">2</a>
+          <a class="page larger" href="#">3</a>
+          <a class="page larger" href="#">4</a>
+          <a class="page larger" href="#">5</a>
+          <a class="page larger" href="#">6</a>
+          <a class="nextpostslink" rel="next" href="#"></a>
         </div>
       </div>
     </section>
