fix：下層Aboutの修正

--- a/src/page-about.html
+++ b/src/page-about.html
@@ -239,19 +239,13 @@
 
     <div class="sub-about layout-sub-about decoration-fish">
       <div class="sub-about__inner inner">
-        <div class="sub-about__about about">
+        <div class="sub-about__wrap">
           <div class="sub-about__images">
             <div class="sub-about__image-small">
-              <picture>
-                <source srcset="./assets/images/common/about_pc_small.jpg" media="(min-width:768px)">
-                <img src="./assets/images/common/about_sp_small.jpg" alt="赤茶色の屋根に乗っているシーサーと青空">
-              </picture>
+              <img src="./assets/images/common/about_pc_small.jpg" alt="赤茶色の屋根に乗っているシーサーと青空">
             </div>
             <div class="sub-about__image-large">
-              <picture>
-                <source srcset="./assets/images/common/about_pc_large.jpg" media="(min-width:768px)">
-                <img src="./assets/images/common/about_sp_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
-              </picture>
+              <img src="./assets/images/common/about_pc_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
             </div>
           </div>
           <div class="sub-about__content">
