fix：下層料金表の修正

--- a/src/page-price.html
+++ b/src/page-price.html
@@ -243,80 +243,68 @@
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">ライセンス講習</h3>
                 <div class="sub-price__img">
-                  <picture>
-                    <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
-                  </picture>
+                  <img src="./assets/images/sub/img-whale.svg" alt="">
                 </div>
               </div>
               <dl class="sub-price__table">
-                <dt>オープンウォーター<br class="u-mobile">ダイバーコース</dt>
-                <dd>&yen;50&#044;000</dd>
-                <dt>アドバンスド<br class="u-mobile">オープンウォーターコース</dt>
-                <dd>&yen;60&#044;000</dd>
-                <dt>レスキュー＋EFRコース</dt>
-                <dd>&yen;70&#044;000</dd>
+                <dt class="sub-price__term">オープンウォーター<br class="u-mobile">ダイバーコース</dt>
+                <dd class="sub-price__description">&yen;50&#044;000</dd>
+                <dt class="sub-price__term">アドバンスド<br class="u-mobile">オープンウォーターコース</dt>
+                <dd class="sub-price__description">&yen;60&#044;000</dd>
+                <dt class="sub-price__term">レスキュー＋EFRコース</dt>
+                <dd class="sub-price__description">&yen;70&#044;000</dd>
               </dl>
             </li>
             <li class="sub-price__item" id="item2">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">体験ダイビング</h3>
                 <div class="sub-price__img">
-                  <picture>
-                    <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
-                  </picture>
+                  <img src="./assets/images/sub/img-whale.svg" alt="">
                 </div>
               </div>
               <dl class="sub-price__table">
-                <dt>ビーチ体験ダイビング<br class="u-mobile">(半日)</dt>
-                <dd>&yen;7&#044;000</dd>
-                <dt>ビーチ体験ダイビング<br class="u-mobile">(1日)</dt>
-                <dd>&yen;14&#044;000</dd>
-                <dt>ボート体験ダイビング<br class="u-mobile">(半日)</dt>
-                <dd>&yen;10&#044;000</dd>
-                <dt>ボート体験ダイビング<br class="u-mobile">(1日)</dt>
-                <dd>&yen;18&#044;000</dd>
+                <dt class="sub-price__term">ビーチ体験ダイビング<br class="u-mobile">(半日)</dt>
+                <dd class="sub-price__description">&yen;7&#044;000</dd>
+                <dt class="sub-price__term">ビーチ体験ダイビング<br class="u-mobile">(1日)</dt>
+                <dd class="sub-price__description">&yen;14&#044;000</dd>
+                <dt class="sub-price__term">ボート体験ダイビング<br class="u-mobile">(半日)</dt>
+                <dd class="sub-price__description">&yen;10&#044;000</dd>
+                <dt class="sub-price__term">ボート体験ダイビング<br class="u-mobile">(1日)</dt>
+                <dd class="sub-price__description">&yen;18&#044;000</dd>
               </dl>
             </li>
             <li class="sub-price__item" id="item3">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">ファンダイビング</h3>
                 <div class="sub-price__img">
-                  <picture>
-                    <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
-                  </picture>
+                  <img src="./assets/images/sub/img-whale.svg" alt="">
                 </div>
               </div>
               <dl class="sub-price__table">
-                <dt>ビーチダイビング<br class="u-mobile">(2ダイブ)</dt>
-                <dd>&yen;14&#044;000</dd>
-                <dt>ボートダイビング<br class="u-mobile">(2ダイブ)</dt>
-                <dd>&yen;18&#044;000</dd>
-                <dt>スペシャルダイビング<br class="u-mobile">(2ダイブ)</dt>
-                <dd>&yen;24&#044;000</dd>
-                <dt>ナイトダイビング<br class="u-mobile">(1ダイブ)</dt>
-                <dd>&yen;10&#044;000</dd>
+                <dt class="sub-price__term">ビーチダイビング<br class="u-mobile">(2ダイブ)</dt>
+                <dd class="sub-price__description">&yen;14&#044;000</dd>
+                <dt class="sub-price__term">ボートダイビング<br class="u-mobile">(2ダイブ)</dt>
+                <dd class="sub-price__description">&yen;18&#044;000</dd>
+                <dt class="sub-price__term">スペシャルダイビング<br class="u-mobile">(2ダイブ)</dt>
+                <dd class="sub-price__description">&yen;24&#044;000</dd>
+                <dt class="sub-price__term">ナイトダイビング<br class="u-mobile">(1ダイブ)</dt>
+                <dd class="sub-price__description">&yen;10&#044;000</dd>
               </dl>
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
                 <h3 class="sub-price__heading">スペシャルダイビング</h3>
                 <div class="sub-price__img">
-                  <picture>
-                    <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
-                    <img src="./assets/images/sub/img-whale_sp.png" alt="">
-                  </picture>
+                  <img src="./assets/images/sub/img-whale.svg" alt="">
                 </div>
               </div>
               <dl class="sub-price__table">
-                <dt>貸切ダイビング<br class="u-mobile">(2ダイブ)</dt>
-                <dd>&yen;14&#044;000</dd>
-                <dt>1日ダイビング<br class="u-mobile">(3ダイブ)</dt>
-                <dd>&yen;18&#044;000</dd>
-                <dt>ナイトダイビング<br class="u-mobile">(2ダイブ)</dt>
-                <dd>&yen;24&#044;000</dd>
+                <dt class="sub-price__term">貸切ダイビング<br class="u-mobile">(2ダイブ)</dt>
+                <dd class="sub-price__description">&yen;14&#044;000</dd>
+                <dt class="sub-price__term">1日ダイビング<br class="u-mobile">(3ダイブ)</dt>
+                <dd class="sub-price__description">&yen;18&#044;000</dd>
+                <dt class="sub-price__term">ナイトダイビング<br class="u-mobile">(2ダイブ)</dt>
+                <dd class="sub-price__description">&yen;24&#044;000</dd>
               </dl>
             </li>
           </ul>
