fix：下層Infoのクラス名の当て方を修正

--- a/src/page-info.html
+++ b/src/page-info.html
@@ -254,8 +254,8 @@
               <div class="tab__content js-tab-content">
                 <div class="tab__content-main">
                   <h3 class="tab__content-title under-line">ライセンス講習</h3>
-                  <div class="tab__content-text">
-                    <p>
+                  <div>
+                    <p class="tab__content-text">
                       泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！
                     </p>
                   </div>
@@ -267,11 +267,9 @@
               <div class="tab__content js-tab-content">
                 <div class="tab__content-main">
                   <h3 class="tab__content-title under-line">体験ダイビング</h3>
-                  <div class="tab__content-text">
-                    <p>
-                      ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
-                    </p>
-                  </div>
+                  <p class="tab__content-text">
+                    ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
+                  </p>
                 </div>
                 <div class="tab__content-img">
                   <img src="./assets/images/sub/info_3.jpg" alt="ストライプ模様の鮮やかな熱帯魚が泳いでいる様子">
@@ -280,11 +278,9 @@
               <div class="tab__content js-tab-content">
                 <div class="tab__content-main">
                   <h3 class="tab__content-title under-line">ファンダイビング</h3>
-                  <div class="tab__content-text">
-                    <p>
-                      ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
-                    </p>
-                  </div>
+                  <p class="tab__content-text">
+                    ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
+                  </p>
                 </div>
                 <div class="tab__content-img">
                   <img src="./assets/images/sub/info_2.jpg" alt="青い海中で群れをなして泳ぐカラフルな魚たち">
