fix：accordionとcontact-formの修正

--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -243,38 +243,32 @@
         <div class="sub-contact__content contact-form">
           <form action="" method="post">
             <div class="contact-form__body">
-              <dl>
-                <dt><label for="userName">お名前<span>必須</span></label></dt>
-                <dd><input type="text" id="userName" name="name" value="" required placeholder="沖縄　太郎"></dd>
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userName">お名前<span>必須</span></label></dt>
+                <dd class="contact-form__input"><input type="text" id="userName" name="name" value="" required
+                    placeholder="沖縄　太郎"></dd>
               </dl>
-              <dl>
-                <dt><label for="userEmail">メールアドレス<span>必須</span></label></dt>
-                <dd><input type="email" id="userEmail" name="mailAddress" value="" required
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userEmail">メールアドレス<span>必須</span></label></dt>
+                <dd class="contact-form__input"><input type="email" id="userEmail" name="mailAddress" value="" required
                     placeholder="aaa000@mail.com"></dd>
               </dl>
-              <dl>
-                <dt><label for="userTel">電話番号<span>必須</span></label></dt>
-                <dd><input type="tel" id="userTel" name="tel" value="" required placeholder="000-0000-0000"></dd>
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userTel">電話番号<span>必須</span></label></dt>
+                <dd class="contact-form__input"><input type="tel" id="userTel" name="tel" value="" required
+                    placeholder="000-0000-0000"></dd>
               </dl>
-              <dl>
-                <dt><label for="userCheck">お問い合わせ項目<span>必須</span></label></dt>
-                <!-- <dd>
-                  <label><input type="radio" name="radio" value="ダイビング講習について" checked><span>ダイビング講習について</span></label>
-                  <label><input type="radio" name="radio" value="ファンダイビングについて"><span>ファンデイビングについて</span></label>
-                  <label><input type="radio" name="radio" value="体験ダイビングについて"><span>体験ダイビングについて</span></label>
-                  <label><input type="radio" name="radio" value="スペシャルダイビングについて"><span>スペシャルダイビングについて</span></label>
-                </dd> -->
-                <dd>
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userCheck">お問い合わせ項目<span>必須</span></label></dt>
+                <dd class="contact-form__input">
                   <label><input type="checkbox" name="checkbox[]" value="ダイビング講習について"><span>ダイビング講習について</span></label>
                   <label><input type="checkbox" name="checkbox[]" value="ファンダイビングについて"><span>ファンデイビングについて</span></label>
                   <label><input type="checkbox" name="checkbox[]" value="体験ダイビングについて"><span>体験ダイビングについて</span></label>
-                  <!-- <label><input type="checkbox" name="checkbox[]"
-                      value="スペシャルダイビングについて"><span>スペシャルダイビングについて</span></label> -->
                 </dd>
               </dl>
-              <dl>
-                <dt><label for="userSelect">キャンペーン</label></dt>
-                <dd>
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userSelect">キャンペーン</label></dt>
+                <dd class="contact-form__input">
                   <select name="select" id="userSelect">
                     <option value="">キャンペーン内容を選択</option>
                     <option value="option_1">ライセンス取得</option>
@@ -284,9 +278,9 @@
                   </select>
                 </dd>
               </dl>
-              <dl>
-                <dt><label for="userInquiry">お問い合わせ内容<span>必須</span></label></dt>
-                <dd><textarea id="userInquiry" name="contents" required></textarea></dd>
+              <dl class="contact-form__wrap">
+                <dt class="contact-form__label"><label for="userInquiry">お問い合わせ内容<span>必須</span></label></dt>
+                <dd class="contact-form__input"><textarea id="userInquiry" name="contents" required></textarea></dd>
               </dl>
             </div>
             <div class="contact-form__footer">
