fix：ページナビの修正

--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -444,14 +444,16 @@
           </div>
         </div>
         <div class="sub-campaign__wp-pagenavi wp-pagenavi">
-          <a class="previouspostslink" rel="prev" href="#"></a>
-          <span class="current">1</span>
-          <a class="page larger" href="#">2</a>
-          <a class="page larger" href="#">3</a>
-          <a class="page larger" href="#">4</a>
-          <a class="page larger" href="#">5</a>
-          <a class="page larger" href="#">6</a>
-          <a class="nextpostslink" rel="next" href="#"></a>
+          <div class="wp-pagenavi__inner">
+            <a class="previouspostslink" rel="prev" href="#"></a>
+            <span class="current">1</span>
+            <a class="page larger" href="#">2</a>
+            <a class="page larger" href="#">3</a>
+            <a class="page larger" href="#">4</a>
+            <a class="page larger" href="#">5</a>
+            <a class="page larger" href="#">6</a>
+            <a class="nextpostslink" rel="next" href="#"></a>
+          </div>
         </div>
       </div>
     </section>
