--- a/src/page-about.html
+++ b/src/page-about.html
@@ -273,22 +273,22 @@
         </div>
         <ul class="gallery__list">
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_1.jpg" alt="">
+            <img src="./assets/images/sub/about_1.jpg" alt="多様なサンゴ礁と群れをなす小さな赤い魚たち">
           </li>
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_2.jpg" alt="">
+            <img src="./assets/images/sub/about_2.jpg" alt="クリアな海と緑の山を背景にした船が停泊している熱帯のビーチ">
           </li>
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_3.jpg" alt="">
+            <img src="./assets/images/sub/about_3.jpg" alt="黄色と青のストライプが特徴的な2匹の熱帯魚">
           </li>
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_4.jpg" alt="">
+            <img src="./assets/images/sub/about_4.jpg" alt="尾びれに黒い帯がある鮮やかな黄色の魚が透明な青い水中を泳ぐ様子">
           </li>
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_5.jpg" alt="">
+            <img src="./assets/images/sub/about_5.jpg" alt="小さなオレンジ色の魚が群れる透き通った青い水中">
           </li>
           <li class="gallery__item js-modal">
-            <img src="./assets/images/sub/about_6.jpg" alt="">
+            <img src="./assets/images/sub/about_6.jpg" alt="サンゴ礁の上を泳ぐ小さな魚の群れ">
           </li>
         </ul>
         <div class="gallery__modal-background js-modal-background"></div>
